<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="ip_address"
            app:title="@string/ip_address_title"
            app:useSimpleSummaryProvider="true"
            android:inputType="numberDecimal"
            android:digits="0123456789."/>

        <EditTextPreference
            app:key="port"
            app:title="@string/port_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="8080"
            android:inputType="numberDecimal"
            android:digits="0123456789"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/detection_header">

        <EditTextPreference
            app:key="block_count"
            app:title="@string/block_count_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="54" />

        <ListPreference
            app:defaultValue="DICT_ARUCO_ORIGINAL"
            app:entries="@array/dictionary_entries"
            app:entryValues="@array/dictionary_values"
            app:key="dictionary"
            app:title="@string/dictionary_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/analysis_header">
        <SwitchPreferenceCompat
            app:key="analysis_method"
            app:title="@string/method_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_header">
        <SwitchPreferenceCompat
            app:key="arcore"
            app:title="@string/arcore_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/calibration_header">

        <EditTextPreference
            app:key="squaresx"
            app:title="@string/squaresx_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="5"/>

        <EditTextPreference
            app:key="squaresy"
            app:title="@string/squaresy_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="8"/>

        <EditTextPreference
            app:key="square_length"
            app:title="@string/square_length_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="2"/>

        <EditTextPreference
            app:key="marker_length"
            app:title="@string/marker_length_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
